commit finale